Fixed landing page spacing + hid some components

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -36,13 +36,45 @@ p {
   margin-bottom: 10px;
 }
 
+@media (max-width: 750px) {
+  p body h1 h2 {
+    font-family: "Poppins", sans-serif;
+    color: #343b58;
+    font-size: small;
+  }
+
+  h1 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    color: #343b58;
+    font-size: small;
+  }
+
+  body,
+  h2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    color: #343b58;
+    font-size: small;
+  }
+
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    color: #8589a7;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    font-size: small;
+  }
+}
+
 .landing-parent {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 70vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .parent {
@@ -50,14 +82,20 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   padding: 0;
-  margin-left: 50px;
+}
+
+.landingContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 20%;
 }
 
 /* @media (max-width: 90vh) {
@@ -67,7 +105,7 @@ p {
 } */
 
 .ant-card {
-  width: 90vh;
+  margin: 20%;
   border-width: 3px;
   border-color: #343b58;
   box-shadow: 7px 7px #343b58;
@@ -96,6 +134,9 @@ p {
   display: grid;
   gap: 10px;
   grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  /* grid-template-columns: minmax(100px, auto); */
+  /* grid-auto-rows: minmax(100px, auto); */
   padding: 10px;
 }
 
@@ -112,6 +153,12 @@ p {
   margin-right: 10px;
 }
 
+@media (max-width: 750px) {
+  .circleIcon {
+    display: none !important;
+  }
+}
+
 .circleIcon {
   padding: 1px;
   width: 30px;
@@ -123,7 +170,6 @@ p {
 
 .browserCard {
   text-align: left;
-  margin: "0px 20px";
 }
 
 /* ===================== Landing Page ===================== */
@@ -158,6 +204,7 @@ p {
   height: 2px;
   border-radius: 1px;
   margin: 10px 10px 10px 0px;
+  /* margin: 10% 10% 10% 0%; */
   width: 300px;
 }
 
@@ -167,6 +214,7 @@ p {
   height: 2px;
   border-radius: 1px;
   margin: 10px 0px 10px 0px;
+  /* margin: 10% 0% 10% 0%; */
   width: 300px;
 }
 
@@ -175,7 +223,7 @@ p {
   justify-content: flex-start;
   transform: rotate(270deg);
   position: fixed;
-  left: -150px;
+  left: -175px;
 }
 
 .emailSideline {
